# qt-test

./: .clang-format  .gitignore  CMakeLists.txt  main.cc
include/: capture_observer.h  device_info_mac.h  meet_window.h
src/: capture_observer.cc  device_info_mac.cc  meet_window.cc  meet_window.ui
